# roundhouse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile.dev  README.md  build.rs  dockerfile  fly.toml
.github/workflows/: fly.yml
config/: development.yaml  fly_prod.toml  fly_staging.toml  production.yaml  tailwind.config.js  tailwind.css  test.yaml
entity/: Cargo.toml
entity/src/: calendar_dates.rs  calendars.rs  lib.rs  prelude.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  trips.rs
migration/src/: lib.rs  m20230527_000148_init_db.rs  m20230721_002803_create_shapes.rs
public/: manifest.json
public/assets/: manifest.json
src/: app.rs  lib.rs
src/controllers/: bus_routes.rs  gtfs.rs  home.rs  mod.rs  trains.rs
src/initializers/: assets.rs  database.rs  fallbacks.rs  mod.rs  reqwest.rs
src/models/: calendar_dates.rs  calendars.rs  mod.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  trips.rs
src/models/_entities/: calendar_dates.rs  calendars.rs  mod.rs  prelude.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  trips.rs
src/services/: marta.rs  mod.rs
src/tasks/: ingest_schedule.rs  mod.rs
src/views/: bus_routes.rs  home.rs  mod.rs  trains.rs
templates/: 404.html.askama  home.html.askama  layout.html.askama
templates/bus_routes/: index.html.askama
templates/trains/: _list_link_style.html.askama  _star_icon.html.askama  _star_off_icon.html.askama  _station_with_pills.html.askama  _tram_front_icon.html.askama  index.html.askama  show.html.askama  station.html.askama
templates/trains/javascript/: nearby_stations.js
tests/requests/: home.rs  mod.rs  trains.rs
