[workspace]
members = [".", "migration", "entity"]

[package]
name = "roundhouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
loco-rs = { version = "0.3", default-features = false, features = ["cli"] }
serde = "*"
serde_json = "*"
eyre = "*"
tokio = { version = "1.33.0", default-features = false, features = ["fs"] }
async-trait = "0.1.74"

axum = "0.7.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
askama = "0.12.1"
tower-http = { version = "0.5.1", features = ["fs", "compression-full"] }
reqwest = { version = "0.11.23", default-features=false, features = ["json", "rustls-tls"] }
cached = { version = "0.47.0", features = ["async"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
tower = "0.4.13"
http = "1.0.0"
cookie = "0.18.0"
fastrand = "2.0.1"
url = "2.5.0"
serde_with = "3.8.1"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
zip = "2.1.5"
csv = "1.3.0"
directories = "5.0.1"
tempfile = "3.10.1"
sea-query = "0.30.7"

[[bin]]
name = "roundhouse-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "*"
rstest = "*"
loco-rs = { version = "0.3", default-features = false, features = [
  "testing",
  "cli",
] }
insta = { version = "*", features = ["redactions", "yaml", "filters"] }
