[workspace]

[package]
name = "roundhouse"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "roundhouse-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.14.0" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.74" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.19" }
uuid = { version = "1.6.0", features = ["v4"] }
include_dir = { version = "0.7" }
# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = { version = "0.9.4" }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }
tempfile = "3.18.0"
sea-query = "0.32.2"
csv = "1.3.1"
zip = "2.2.3"
prost = "0.13.5"
prost-build = "0.13.5"
cached = { version = "0.55.1", features = ["async"] }
askama = "0.12.1"
fastrand = "2.3.0"
serde_with = "3.12.0"
cookie = "0.18.1"
http = "1.2.0"
axum-extra = { version = "0.10.0", features = ["cookie"] }
tower-http = { version = "0.6.2", features = ["fs", "compression-full"] }
# /view engine

[[bin]]
name = "roundhouse-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }

[build-dependencies]
prost-build = "0.13.3"
